Añadido Cobro, insertar/eliminar pedidos y productos de pedidos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,37 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <h1>Bienvenido a FredomTPV</h1>
+                <h1>FreedomTPV</h1>
+
+                <p>FreedomTPV es una aplicación web que consiste en la Administración de
+                    productos,categorías,
+                    usuarios y pedidos. El enfoque de la aplicación es un enfoque genérico lo cual te permite adaptarlo
+                    a cualquier
+                    tipo de negocio. Puede ser un taller de coches o un restaurante.</p>
+                <p>
+                    Las tecnologías que se han utilizado para la aplicación son:
+
+                <ul>
+                    <li>Backend: Laravel</li>
+                    <li>Frontend: VueJS, Librerias Jquery, Bootstrap</li>
+                    <li>Herramientas para el desarrollo: Postman, VSCode</li>
+                </ul>
+                </p>
+                <p>
+                    FreedomTPV es una aplicación completamente gratuita. Esto es un despliegue para comprobar el
+                    funcionamiento de la aplicación,
+                    Puedes descargar tanto la parte visual, como si quieres hacer la tuya utilizando únicamente la API.
+                </p>
+                <p> Aconsejo si vas a utilizar este programa a nivel profesional, cambiar este texto adaptado para la
+                    empresa</p>
+
+
+                <p>Desarrollado por: Alejandro Sánchez Quesada</p>
+
+                <a href="https://github.com/AlejandroSanchezQuesada/tpv"><i class="fab fa-github">API</i></a>
+                <a href="https://github.com/AlejandroSanchezQuesada/FreedomTPV"><i class="fab fa-github">Visual</i></a>
+
+                </p>
             </div>
 
             <a href="pages/login/login.html">Al Login</a>
