Simplificado sistema de carpetas, corregido un error al cobrar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/css/mdb.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a4fd43b371.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../styles/stylesheets/login/login.css">
+    
+    <link rel="stylesheet" href="styles/stylesheets/index.css">
 
 
 </head>
@@ -57,7 +58,7 @@
                 </p>
             </div>
 
-            <a href="pages/login/login.html">Al Login</a>
+            <a href="pages/login.html">Al Login</a>
 
             <div class="col-6" id="app">
 
@@ -68,7 +69,6 @@
     <!-- Vue y Axios -->
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="../../scripts/login/login.js"></script>
     <script src="config/api.js"></script>
 
 </body>
