--- a/pages/login.html
+++ b/pages/login.html
@@ -14,7 +14,7 @@
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/css/mdb.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a4fd43b371.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../styles/stylesheets/login/login.css">
+    <link rel="stylesheet" href="../styles/stylesheets/login.css">
     
 
 </head>
@@ -103,7 +103,7 @@
         <!-- Importando URL de la API -->
         <script src="../../config/api.js"></script>
         <!-- Codigo JS/VUE de Login -->
-        <script src="../../scripts/login/login.js"></script>
+        <script src="../scripts/login.js"></script>
         
 
 </body>
