--- a/pages/main.html
+++ b/pages/main.html
@@ -27,7 +27,7 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/js/mdb.min.js"></script>
 
     <script src="https://kit.fontawesome.com/a4fd43b371.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/styles/stylesheets/main/main.css">
+    <link rel="stylesheet" href="../styles/stylesheets/main.css">
 </head>
 
 <body>
@@ -241,7 +241,7 @@
     <!-- Vue y Axios -->
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="/scripts/main/main.js"></script>
+    <script src="../scripts/main.js"></script>
     <!-- Print JS Libreria -->
     <script src="https://printjs-4de6.kxcdn.com/print.min.js"></script>
     <link rel="stylesheet" href="https://printjs-4de6.kxcdn.com/print.min.css">
