CRUD Basico, corregidos errores menores

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/css/mdb.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a4fd43b371.js" crossorigin="anonymous"></script>
-    
+
     <link rel="stylesheet" href="styles/stylesheets/index.css">
 
 
@@ -66,6 +66,14 @@
         </div>
 
     </div>
+
+    <!-- Footer -->
+    <div class="row footer">
+        <div class="col-6">FreedomTPV</div>
+        <div class="col-6">Alejandro Sánchez Quesada</div>
+    </div>
+
+
     <!-- Vue y Axios -->
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
