--- a/pages/login.html
+++ b/pages/login.html
@@ -15,7 +15,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.18.0/css/mdb.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a4fd43b371.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/stylesheets/login.css">
-    
+
 
 </head>
 
@@ -85,8 +85,7 @@
                         <label class="custom-control-label" for="empleado">Empleado</label>
                     </div>
                     <div class="custom-control custom-radio">
-                        <input type="radio" id="jefe" name="jefe" value=1 class="custom-control-input"
-                            v-model="jefe">
+                        <input type="radio" id="jefe" name="jefe" value=1 class="custom-control-input" v-model="jefe">
                         <label class="custom-control-label" for="jefe">Jefe</label>
                     </div>
 
@@ -97,6 +96,15 @@
             </div>
 
         </div>
+
+        <!-- Footer -->
+        <div class="row footer">
+
+            <div class="col-4">FreedomTPV</div>
+            <div class="col-4">Login</div>
+            <div class="col-4">Alejandro Sánchez Quesada</div>
+
+        </div>
         <!-- Vue y Axios -->
         <script src="https://unpkg.com/vue/dist/vue.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -104,7 +112,7 @@
         <script src="../../config/api.js"></script>
         <!-- Codigo JS/VUE de Login -->
         <script src="../scripts/login.js"></script>
-        
+
 
 </body>
 
