--- a/pages/main.html
+++ b/pages/main.html
@@ -69,7 +69,16 @@
                                 </div>
                             </div>
                             <div class="col-4">
-                                <img :src=usuarios.avatar :alt=usuarios.nombre>
+                               <!--  <img :src=usuarios.avatar :alt=usuarios.nombre> -->
+                               <div class="dropdown">
+                                <div class="dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="false"><img :src="usuarios.avatar"
+                                    :alt=usuarios.nombre class="img_avatar"></div>
+        
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                    <a class="dropdown-item" v-on:click="cerrarSesion">Cerrar Sesión <i class="fas fa-power-off"></i></a>
+                                </div>
+                            </div>
                             </div>
                         </div>
 
@@ -230,9 +239,16 @@
 
 
 
-    </div>
+    </div><!-- Fin App Vue -->
 
+<!-- Footer -->
+<div class="row footer">
 
+    <div class="col-4">FreedomTPV</div>
+    <div class="col-4">TPV</div>
+    <div class="col-4">Alejandro Sánchez Quesada</div>
+
+</div>
 
 
 
