Añadido favicon y configurada ruta heroku

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FreedomTPV</title>
+    <link rel="icon" type="image/png" href="./styles/images/logo/favicon.png"/>
 
     <!-- Bootstrap CSS e Iconos -->
     <!-- Google Fonts -->
