--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -272,7 +272,7 @@
                                             class="fas fa-edit" ></i></button>
                                 </td>
                                 <td v-if="usuarioLogeado.jefe == 1">
-                                    <button class="btn btn-success btn-eliminar"  v-on:click="eliminarProducto(producto.id)"><i
+                                    <button class="btn btn-success btn-eliminar"  v-on:click="eliminarCategoria(categoria.id)"><i
                                             class="fas fa-trash-alt"></i>
                                     </button></td>
                             </tr>
@@ -488,8 +488,8 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" v-on:click="crearProducto">Crear</button>
+                    <button type="button" class="btn btn-secondary btn-editar" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary btn-crear" v-on:click="crearProducto">Crear</button>
                 </div>
             </div>
         </div>
@@ -556,8 +556,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" v-on:click="crearUsuario">Crear</button>
+                    <button type="button" class="btn btn-secondary btn-editar" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary btn-crear" v-on:click="crearUsuario">Crear</button>
                 </div>
             </div>
         </div>
@@ -584,8 +584,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" v-on:click="crearPuesto">Crear</button>
+                    <button type="button" class="btn btn-secondary btn-editar" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary btn-crear" v-on:click="crearPuesto">Crear</button>
                 </div>
             </div>
         </div>
@@ -612,8 +612,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" v-on:click="crearCategoria">Crear</button>
+                    <button type="button" class="btn btn-secondary btn-editar" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary btn-crear" v-on:click="crearCategoria">Crear</button>
                 </div>
             </div>
         </div>
@@ -648,7 +648,7 @@
                         placeholder="http://rutafoto.jpg">
                 </div>
 
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="formGroupExampleInput">Contraseña</label>
                     <input type="password" class="form-control" v-model="contrasenyaUsuario"
                         placeholder="clavesegura123">
@@ -658,7 +658,7 @@
                     <label for="formGroupExampleInput">Confirmar Contraseña</label>
                     <input type="password" class="form-control" v-model="confirmcontrasenyaUsuario"
                         placeholder="clavesegura123">
-                </div>
+                </div> -->
 
                 <div class="custom-control custom-radio">
                     <input type="radio" id="empleado" name="empleado" value=0 class="custom-control-input"
@@ -673,8 +673,8 @@
             </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-          <button type="button" class="btn btn-primary" v-on:click="editarUsuario()">Editar Usuario</button>
+          <button type="button" class="btn btn-secondary btn-editar" data-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-primary btn-crear" v-on:click="editarUsuario()">Editar Usuario</button>
         </div>
       </div>
     </div>
@@ -727,8 +727,8 @@
 
           </div>
           <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-              <button type="button" class="btn btn-primary" v-on:click="editarProducto">Editar</button>
+              <button type="button" class="btn btn-secondary btn-editar" data-dismiss="modal">Cerrar</button>
+              <button type="button" class="btn btn-primary btn-crear" v-on:click="editarProducto">Editar</button>
           </div>
       </div>
   </div>
@@ -756,8 +756,8 @@ aria-hidden="true">
             </form>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-            <button type="button" class="btn btn-primary" v-on:click="editarCategoria">Editar</button>
+            <button type="button" class="btn btn-secondary btn-editar" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-primary btn-crear" v-on:click="editarCategoria">Editar</button>
         </div>
     </div>
 </div>
@@ -784,8 +784,8 @@ aria-hidden="true">
             </form>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-            <button type="button" class="btn btn-primary" v-on:click="editarPuesto">Editar</button>
+            <button type="button" class="btn btn-secondary btn-editar" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-primary btn-crear" v-on:click="editarPuesto">Editar</button>
         </div>
     </div>
 </div>
